force-app/main/default/objects/Library_Item__c/fields/Author_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Author_Manufacturer__c</fullName>
    <description>Creator/maker information</description>
    <inlineHelpText>Creator/maker information</inlineHelpText>
    <label>Author_Manufacturer</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>