force-app/main/default/objects/Library_Item__c/fields/Barcode__c.field-meta.xml
<CustomField>
    <fullName>Barcode__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Barcode</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>