force-app/main/default/objects/Library_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Aging</fullName>
            </value>
            <value>
                <fullName>Animals</fullName>
            </value>
            <value>
                <fullName>Anthropology</fullName>
            </value>
            <value>
                <fullName>Archaeology</fullName>
            </value>
            <value>
                <fullName>Art</fullName>
            </value>
            <value>
                <fullName>Astrology</fullName>
            </value>
            <value>
                <fullName>Audio/Visual</fullName>
            </value>
            <value>
                <fullName>Autobiography</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Aviation</fullName>
            </value>
            <value>
                <fullName>Biography</fullName>
            </value>
            <value>
                <fullName>Biology</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>Children&apos;s Books</fullName>
            </value>
            <value>
                <fullName>Computer Science</fullName>
            </value>
            <value>
                <fullName>Contemporary Fiction</fullName>
            </value>
            <value>
                <fullName>Cooking</fullName>
            </value>
            <value>
                <fullName>Crafts</fullName>
            </value>
            <value>
                <fullName>Criticism</fullName>
            </value>
            <value>
                <fullName>Cultural Studies</fullName>
            </value>
            <value>
                <fullName>Death and Dying</fullName>
            </value>
            <value>
                <fullName>Dictionary</fullName>
            </value>
            <value>
                <fullName>Disability Studies</fullName>
            </value>
            <value>
                <fullName>Drama</fullName>
            </value>
            <value>
                <fullName>Economics</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Encyclopedia</fullName>
            </value>
            <value>
                <fullName>Entrepreneurship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>