force-app/main/default/objects/Library_Item__c/fields/Current_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Current_Borrower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who has it now</description>
    <inlineHelpText>Who has it now</inlineHelpText>
    <label>Current_Borrower</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Library_Items</relationshipName>
    <type>Lookup</type>
</CustomField>