force-app/main/default/objects/Library_Item__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <label>Current_Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Checked Out</fullName>
            </value>
            <value>
                <fullName>Checked_Out</fullName>
                <isActive>false</isActive>
                <label>Checked Out</label>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
                <isActive>false</isActive>
                <label>Retired</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>