force-app/main/default/objects/Library_Item__c/fields/ISBN_Serial__c.field-meta.xml
<CustomField>
    <fullName>ISBN_Serial__c</fullName>
    <description>ISBN for books, serial for equipment</description>
    <inlineHelpText>ISBN for books, serial for equipment</inlineHelpText>
    <label>ISBN_Serial</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>