force-app/main/default/objects/Library_Item__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <description>Display name of the item</description>
    <inlineHelpText>Display name of the item</inlineHelpText>
    <label>Item_Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>