force-app/main/default/objects/Library_Item__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <description>Inventory type</description>
    <inlineHelpText>Inventory type</inlineHelpText>
    <label>Item_Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Book</fullName>
            </value>
            <value>
                <fullName>Blu-Ray</fullName>
            </value>
            <value>
                <fullName>Video Game</fullName>
            </value>
            <value>
                <fullName>DVD</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>