force-app/main/default/objects/Library_Item__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Physical location when available</description>
    <inlineHelpText>Physical location when available</inlineHelpText>
    <label>Location</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>