force-app/main/default/objects/Library_Item__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <description>Date when acquired</description>
    <inlineHelpText>Date when acquired</inlineHelpText>
    <label>Purchase_Date</label>
    <type>Date</type>
</CustomField>