force-app/main/default/objects/Library_Item__c/validationRules/VR_Barcode_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Barcode_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Barcode__c)</errorConditionFormula>
    <errorDisplayField>Barcode__c</errorDisplayField>
    <errorMessage>Barcode is required for all library items</errorMessage>
</ValidationRule>