force-app/main/default/objects/Library_Item__c/validationRules/VR_Prevent_Checkout_When_Not_Available.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Prevent_Checkout_When_Not_Available</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Current_Borrower__c)),
    ISCHANGED(Current_Borrower__c),
    TEXT(Current_Status__c) != &apos;Checked Out&apos;
)</errorConditionFormula>
    <errorMessage>Item must be Available to be Checked Out</errorMessage>
</ValidationRule>